[package]
name = "whirl"
version = "0.1.0"
authors = ["Fuwn <fuwnzy@gmail.com>"]
edition = "2018"
description = "Whirl, an open-source WorldServer implementation in Rust."
documentation = "https://www.whirlsplash.org"
readme = "README.md"
homepage = "https://whirlsplash.org"
license = "GPLv3"
# license-file = "LICENSE"
keywords = ["rust", "worldserver", "whirl", "whirlsplash"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Environment
dotenv = "0.15.0"

# Logging
log = "0.4.14"
pretty_env_logger = "0.4.0"

# Utility
rand = "0.8.3"
bytes = "1.0.1"
serde = "1.0.125"
serde_derive = "1.0.125"

# CLI
structopt = "0.3.21"

# Config
confy = "0.4.0"

# TCP
[dependencies.tokio]
version = "1.4.0"
features = ["full"]
[dependencies.tokio-util]
version = "0.6.5"
features = ["codec"]
[dependencies.tokio-stream]
version = "0.1.5"

# Utility
[dependencies.phf]
version = "0.8.0"
features = ["macros"]

# Database
[dependencies.sqlx]
version = "0.5.1"
features = ["runtime-async-std-rustls", "sqlite", "macros", "migrate", "chrono", "time", "tls"]
