[package]
name = "whirl"
version = "0.1.0"
authors = ["Fuwn <fuwnzy@gmail.com>"]
edition = "2018"
description = "Whirl, an open-source WorldServer implementation in Rust."
documentation = "https://whirlsplash.org/docs/"
readme = "README.md"
homepage = "https://whirlsplash.org"
repository = "https://github.com/Whirlsplash/whirl"
license = "GPL-3.0-only"
# license-file = "LICENSE"
keywords = ["rust", "worldserver", "whirl", "whirlsplash"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Environment
dotenv = "0.15.0"

# Logging
log = "0.4.14"
pretty_env_logger = "0.4.0"

# Utility
rand = "0.8.3"
async-trait = "0.1.50"
sysinfo = "0.17.4"

# Byte Manipulation
bytes = "1.0.1"
serde = "1.0.126"
serde_derive = "1.0.126"
byteorder = "1.4.3"

# CLI
structopt = "0.3.21"

# Config
config = "0.11.0"

# TCP
tokio = { version = "1.6.0", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
tokio-stream = "0.1.6"

# Database
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
diesel = { version = "1.4.6", features = ["sqlite"] }

# Web-server
actix-web = { version = "3.3.2", features = ["rustls"] }
actix-cors = "0.5.4"
