# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "crates/whirl",
  "crates/whirl_api",
  "crates/whirl_common",
  "crates/whirl_config",
  "crates/whirl_db",
  "crates/whirl_prompt",
  "crates/whirl_server"
]

[profile.release]
lto = "fat"
codegen-units = 1
