[package]
name = "whirl"
version = "0.1.0"
authors = ["Fuwn <fuwnzy@gmail.com>"]
edition = "2018"
description = "The Open-Source WorldServer."
documentation = "https://whirlsplash.org/docs/"
readme = "../../README.rst"
homepage = "https://whirlsplash.org"
repository = "https://github.com/Whirlsplash/whirl"
license = "GPL-3.0-only"
keywords = ["rust", "worldserver", "whirl", "whirlsplash"]
publish = false

[dependencies]
# Environment
dotenv = "0.15.0"

# Logging
log = "0.4.14"
flexi_logger = "0.18.0"
human-panic = "1.0.3"
# simple-error = "0.2.3"

# Utility
rand = "0.8.4"
async-trait = "0.1.51"
whirl_common = { path = "../whirl_common" }

# Byte Manipulation
bytes = "1.0.1"
byteorder = "1.4.3"

# Serialization
serde = "1.0.127"
serde_derive = "1.0.127"

# CLI
structopt = "0.3.22"

# Config
whirl_config = { path = "../whirl_config" }

# TCP
tokio = { version = "1.9.0", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
tokio-stream = "0.1.7"

# Web-server
actix-web = { version = "3.3.2", features = ["rustls"] }
actix-cors = "0.5.4"
whirl_api = { path = "../whirl_api" }

# Prompt
whirl_prompt = { path = "../whirl_prompt" }

# Server
whirl_server = { path = "../whirl_server" }

# Allocator
[target.'cfg(windows)'.dependencies]
mimalloc = { version = "0.1.26", default-features = false }

[target.'cfg(unix)'.dependencies]
jemallocator = "0.3.2"

# Signal
signal-hook = "0.3.9"
signal-hook-tokio = "0.3.0"
