[package]
name = "whirl_api"
version = "0.1.0"
authors = ["Fuwn <fuwnzy@gmail.com>"]
edition = "2018"
description = "Enables for remote interaction"
documentation = "https://whirlsplash.org/docs/"
readme = "../../README.rst"
homepage = "https://whirlsplash.org"
repository = "https://github.com/Whirlsplash/whirl"
license = "GPL-3.0-only"
keywords = ["rust", "worldserver", "whirl", "whirlsplash"]
publish = false

[dependencies]
# Web-server
actix-web = { version = "3.3.2", features = ["rustls"] }
actix-cors = "0.5.4"
axum = "0.1.3"
hyper = "0.14.13"

# Utility
sysinfo = "0.20.5"
whirl_common = { path = "../whirl_common" }
tokio = { version = "1.13.0", features = ["full"] }
num-traits = "0.2.14"
qstring = "0.7.2"

# Serialization
serde = "1.0.130"
serde_derive = "1.0.133"

# Logging
log = "0.4.14"

# Config
whirl_config = { path = "../whirl_config" }

# Web
curl = "0.4.40"
