[package]
name = "whirl_common"
version = "0.1.0"
authors = ["Fuwn <fuwnzy@gmail.com>"]
edition = "2018"
description = "Provides assorted utilities for global use"
documentation = "https://whirlsplash.org/docs/"
readme = "../../README.rst"
homepage = "https://whirlsplash.org"
repository = "https://github.com/Whirlsplash/whirl"
license = "GPL-3.0-only"
keywords = ["rust", "worldserver", "whirl", "whirlsplash"]
publish = false

[dependencies]
# Config
whirl_config = { path = "../whirl_config" }

[dev-dependencies]
# Benchmark
iai = "0.1.1"
criterion = { version = "0.3.4", features = ["html_reports"] }

[[bench]]
name = "whirl_common"
path = "../../benches/whirl_common_iai.rs"
harness = false

[[bench]]
name = "whirl_common_criterion"
path = "../../benches/whirl_common_criterion.rs"
harness = false
