[package]
name = "whirl_config"
version = "0.1.0"
authors = ["Fuwn <contact@fuwn.me>"]
edition = "2018"
description = "Provides abstractions to interact with the configuration system"
documentation = "https://whirlsplash.org/docs/"
readme = "../../README.rst"
homepage = "https://whirlsplash.org"
repository = "https://github.com/Whirlsplash/whirl"
license = "GPL-3.0-only"
keywords = ["rust", "worldserver", "whirl", "whirlsplash"]
publish = false

[dependencies]
# Config
config = "0.14.0"

# Serialization
serde = "1.0.136"
serde_derive = "1.0.136"

# Logging
log = "0.4.14"
