[package]
name = "whirl_db"
version = "0.1.0"
authors = ["Fuwn <contact@fuwn.me>"]
edition = "2018"
description = "Provides abstractions to interact with the database layer"
documentation = "https://whirlsplash.org/docs/"
readme = "../../README.rst"
homepage = "https://whirlsplash.org"
repository = "https://github.com/Whirlsplash/whirl"
license = "GPL-3.0-only"
keywords = ["rust", "worldserver", "whirl", "whirlsplash"]
publish = false

[dependencies]
# Database
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
diesel = { version = "2.2.3", features = ["sqlite"] }

# Environment
dotenv = "0.15.0"
