[package]
name = "whirl_prompt"
version = "0.1.0"
authors = ["Fuwn <fuwnzy@gmail.com>"]
edition = "2018"
description = "Enables for local interaction"
documentation = "https://whirlsplash.org/docs/"
readme = "../../README.rst"
homepage = "https://whirlsplash.org"
repository = "https://github.com/Whirlsplash/whirl"
license = "GPL-3.0-only"
keywords = ["rust", "worldserver", "whirl", "whirlsplash"]
publish = false

[dependencies]
# Utility
sysinfo = "0.23.5"
colour = "0.6.0"

# Config
whirl_config = { path = "../whirl_config" }

# Web
curl = "0.4.42"
