[package]
name = "whirl_server"
version = "0.1.0"
authors = ["Fuwn <fuwnzy@gmail.com>"]
edition = "2018"
description = "Whirl, an open-source WorldServer implementation in Rust."
documentation = "https://whirlsplash.org/docs/"
readme = "../../README.rst"
homepage = "https://whirlsplash.org"
repository = "https://github.com/Whirlsplash/whirl"
license = "GPL-3.0-only"
# license-file = "LICENSE"
keywords = ["rust", "worldserver", "whirl", "whirlsplash"]
publish = false

[dependencies]
# Logging
log = "0.4.14"

# Utility
async-trait = "0.1.50"

# Byte Manipulation
bytes = "1.0.1"
byteorder = "1.4.3"

# Serialization
serde = "1.0.126"
serde_derive = "1.0.126"

# TCP
tokio = { version = "1.6.0", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
tokio-stream = "0.1.6"

# Config
whirl_config = { path = "../whirl_config" }
