[package]
name = "whirl_server"
version = "0.1.0"
authors = ["Fuwn <fuwnzy@gmail.com>"]
edition = "2018"
description = "Instantiates the sub-servers which a WorldServer *should* accommodate."
documentation = "https://whirlsplash.org/docs/"
readme = "../../README.rst"
homepage = "https://whirlsplash.org"
repository = "https://github.com/Whirlsplash/whirl"
license = "GPL-3.0-only"
keywords = ["rust", "worldserver", "whirl", "whirlsplash"]
publish = false

[dependencies]
# Logging
log = "0.4.14"

# Utility
async-trait = "0.1.51"
num-traits = "0.2.14"
num-derive = "0.3.3"

# Byte Manipulation
bytes = "1.1.0"
byteorder = "1.4.3"

# Serialization
serde = "1.0.130"
serde_derive = "1.0.130"

# TCP
tokio = { version = "1.13.0", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
tokio-stream = "0.1.7"

# Config
whirl_config = { path = "../whirl_config" }
